--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@chakra-ui/icons": "^2.0.10",
+    "@chakra-ui/react": "^2.3.4",
+    "@chakra-ui/theme": "^2.1.12",
+    "@chakra-ui/theme-tools": "^2.0.11",
+    "@emailjs/browser": "^3.7.0",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-invisible-recaptcha": "^0.2.12",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.4.37",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
