--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "triomatic_solution",
+  "homepage": "https://www.triomaticsolutions.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +15,6 @@
     "framer-motion": "6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-invisible-recaptcha": "^0.2.12",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
